src/test/ui/issue-23302-3.stderr
error[E0391]: cycle detected when const-evaluating `A`
  --> $DIR/issue-23302-3.rs:11:16
   |
LL | const A: i32 = B; //~ ERROR cycle detected
   |                ^
   |
note: ...which requires const-evaluating `B`...
  --> $DIR/issue-23302-3.rs:13:16
   |
LL | const B: i32 = A;
   |                ^
   = note: ...which again requires const-evaluating `A`, completing the cycle

error: aborting due to previous error

For more information about this error, try `rustc --explain E0391`.
